# fingram_backend

./: .dockerignore  .env-example  .flake8  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init_migrate.py  0002_add_news_table.py  0003_add_news_media_table.py  0004_add_events_table.py  0005_add_partners_table.py  0006_add_user_table.py  0007_add_token_table.py
app/: application.py
app/api/depends/: auth_depends.py
app/api/repositories/: events.py  news.py  partners.py  token.py  user.py
app/api/routers/: auth.py  events.py  news.py  partners.py
app/api/schemas/: auth.py  events.py  news.py  paginator.py  partners.py
app/api/services/: auth.py  events.py  news.py  partners.py  token.py
app/api/utils/: converter.py
app/auth/: utils.py
app/core/: __init__.py  config.py  settings.py
app/core/models/: __init__.py  events.py  news.py  news_media.py  partners.py  token.py  user.py  utils.py
